--- a/php/sass/elements/_results.scss
+++ b/php/sass/elements/_results.scss
@@ -1,13 +1,10 @@
 .results {
-	min-height: 100%;
 	position: relative;
 	.table{
 		margin-bottom: 0px;
-		overflow: hidden;
 	}
 	.content {
 		background:#fff;
-		min-height: 100%;
 		h3 {
 			margin-bottom: 20px;
 		    margin-left: 47px;
